--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &#8594 </a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &#8594</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик с собакой">
       <div class="header__square-pic"></div>
     </header>
@@ -89,7 +89,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и забыть</h3>
         <a href="#" class="feynman__link">Подробнее &#8594</a>
-        <img src="./images/feynman.png"alt="Портрет Фейнмана"class="feynman__portret">
+        <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__portret">
       </section>
 
       <section class="kaufman">
@@ -143,8 +143,8 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__columns_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум"class="logo_place_footer">
-          <p class="footer__author">&COPY 2019.Виктор Абанькин</p>
+          <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo_place_footer">
+          <p class="footer__author">&#169 2019.Виктор Абанькин</p>
         </div>
         <div class="footer__columns_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
@@ -157,9 +157,9 @@
         <div class="footer__columns_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-link">
-            <li><a href="#"><img src="./images/facebook_color_white.svg"alt="Facebook" class="footer__social-icon"></a>Facebook</li>
-            <li><a href="#"><img src="./images/vk_color_white.svg"alt="VK" class="footer__social-icon"></a>Вконтакте</li>
-            <li><a href="#"><img src="./images/instagram_color_white.svg"alt="Instagram" class="footer__social-icon"></a>Instagram</li>
+            <li><a href="#"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon"></a>Facebook</li>
+            <li><a href="#"><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon"></a>Вконтакте</li>
+            <li><a href="#"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon"></a>Instagram</li>
           </ul>
 
         </div>
