--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &#8594</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &#8594;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик с собакой">
       <div class="header__square-pic"></div>
     </header>
@@ -88,7 +88,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и забыть</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594</a>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
         <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__portret">
       </section>
 
@@ -144,7 +144,7 @@
       <div class="footer__columns">
         <div class="footer__columns_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo_place_footer">
-          <p class="footer__author">&#169 2019.Виктор Абанькин</p>
+          <p class="footer__author">&#169; 2019.Виктор Абанькин</p>
         </div>
         <div class="footer__columns_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
