--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="footer__columns">
         <div class="footer__columns_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo_place_footer">
-          <p class="footer__author">&#169; 2019.Виктор Абанькин</p>
+          <p class="footer__author">&#169; 2022.Константин Серебренников</p>
         </div>
         <div class="footer__columns_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
