--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
@@ -22,15 +22,9 @@
         <div class='two-column'>
           <p class="two-column__brief">Главные проблемы в обучении</p>
           <div class="two-column__main-text">
-            <p class="two-column__paragraph">Ни в школе
-              , ни в институте нас не учат тому, как правильно изучать материал. Мы
-              готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
-              чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка
-              быстро выветривается и не приносит пользы.</p>
+            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-column__paragraph two-column__conclusion"><span class="two-column__paragraph_line-weight_bold">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его
-              эффективным и захватывающим. Эти же техники применяются на примере обучения в
-              Практикуме.</p>
+            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -42,13 +36,11 @@
             <ul class="table">
               <li class="cell">
                 <h3 class='heading'>86 миллиардов</h3>
-                <p class='text'>Число нейронов в мозге
-                  человека</p>
+                <p class='text'>Число нейронов в мозге человека</p>
               </li>
               <li class="cell">
                 <h3 class='heading'>2,1 миллиарда</h3>
-                <p class='text'>Число нуждающихся в
-                  повышении квалификации</p>
+                <p class='text'>Число нуждающихся в повышении квалификации</p>
                 <p class="text">Всемирный Банк, 2017</p>
               </li>
               <li class="cell">
@@ -57,17 +49,13 @@
               </li>
               <li class="cell">
                 <h3 class='heading'>500 триллионов</h3>
-                <p class='text'>Число ответственных за
-                  обучение нервных синапсов
-                  у взрослого человека</p>
+                <p class='text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
               </li>
               <li class="cell">
                 <h3 class='heading'>420 милионов</h3>
-                <p class='text'>Число взрослых людей
-                  моложе 25 лет, не имеющих
-                  образования для
-                  трудоустройства</p>
+                <p class='text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p class="text">Всемирный Банк, 2017</p>
+              </li>
               <li class="cell">
                   <h3 class='heading'>17-20 лет</h3>
                   <p class='text'>Пик обучаемости</p>
@@ -78,8 +66,7 @@
               </li>
               <li class="cell">
                 <h3 class='heading'>1889 год</h3>
-                <p class='text'>Открытие условного
-                  рефлекса</p>
+                <p class='text'>Открытие условного рефлекса</p>
               </li>          
             </ul>
          
@@ -157,9 +144,9 @@
         <div class="footer__columns_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-link">
-            <li><a href="#"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon"></a>Facebook</li>
-            <li><a href="#"><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon"></a>Вконтакте</li>
-            <li><a href="#"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon"></a>Instagram</li>
+            <li><a href="#"><img src="./images/facebook_color_white.svg" alt="ФБ" class="footer__social-icon"></a>Facebook</li>
+            <li><a href="#"><img src="./images/vk_color_white.svg" alt="ВК" class="footer__social-icon"></a>Вконтакте</li>
+            <li><a href="#"><img src="./images/instagram_color_white.svg" alt="Инста" class="footer__social-icon"></a>Instagram</li>
           </ul>
 
         </div>
