--- a/index.html
+++ b/index.html
@@ -10,63 +10,63 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс.Практикум">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &#8594;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать? &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик с собакой">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
 
       <section class="description">
-        <div class='two-column'>
-          <p class="two-column__brief">Главные проблемы в обучении</p>
-          <div class="two-column__main-text">
-            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-column__paragraph two-column__conclusion"><span class="two-column__paragraph_line-weight_bold">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
 
       <section class="digits">
-        <h2 class='section-title'>Цифры и факты</h2>
-        <h3 class='section-subtitle'>Про учебу и мозг</h3>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
         
             <ul class="table">
-              <li class="cell">
-                <h3 class='heading'>86 миллиардов</h3>
-                <p class='text'>Число нейронов в мозге человека</p>
+              <li class="table__cell">
+                <h3 class="table__heading">86 миллиардов</h3>
+                <p class="table__text">Число нейронов в мозге человека</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>2,1 миллиарда</h3>
-                <p class='text'>Число нуждающихся в повышении квалификации</p>
-                <p class="text">Всемирный Банк, 2017</p>
+              <li class="table__cell">
+                <h3 class="table__heading">2,1 миллиарда</h3>
+                <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                <p class="table__text">Всемирный Банк, 2017</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>1000 терабайт</h3>
-                <p class='text'>Объём памяти человека</p>
+              <li class="table__cell">
+                <h3 class="table__heading">1000 терабайт</h3>
+                <p class="table__text">Объём памяти человека</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>500 триллионов</h3>
-                <p class='text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              <li class="table__cell">
+                <h3 class="table__heading">500 триллионов</h3>
+                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>420 милионов</h3>
-                <p class='text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                <p class="text">Всемирный Банк, 2017</p>
+              <li class="table__cell">
+                <h3 class="table__heading">420 милионов</h3>
+                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                <p class="table__text">Всемирный Банк, 2017</p>
               </li>
-              <li class="cell">
-                  <h3 class='heading'>17-20 лет</h3>
-                  <p class='text'>Пик обучаемости</p>
+              <li class="table__cell">
+                  <h3 class="table__heading">17-20 лет</h3>
+                  <p class="table__text">Пик обучаемости</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>1885 год</h3>
-                <p class='text'>Открытие кривой забывания</p>
+              <li class="table__cell">
+                <h3 class="table__heading">1885 год</h3>
+                <p class="table__text">Открытие кривой забывания</p>
               </li>
-              <li class="cell">
-                <h3 class='heading'>1889 год</h3>
-                <p class='text'>Открытие условного рефлекса</p>
+              <li class="table__cell">
+                <h3 class="table__heading">1889 год</h3>
+                <p class="table__text">Открытие условного рефлекса</p>
               </li>          
             </ul>
          
@@ -74,83 +74,85 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и забыть</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <p class="feynman__subtitle">Выучить и забыть</p>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__portret">
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>1</h4>
-            <p class='text text_theme_dark'>Выберите привлекательный проект.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>2</h4>
-            <p class='text text_theme_dark'>Сосредоточтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>3</h4>
-            <p class='text text_theme_dark'>Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>4</h4>
-            <p class='text text_theme_dark'>Разбейте навык на элементы.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>5</h4>
-            <p class='text text_theme_dark'>Приготовьте всё необходимое для занятии.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятии.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>6</h4>
-            <p class='text text_theme_dark'>Устраните препятствия для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>7</h4>
-            <p class='text text_theme_dark'>Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>8</h4>
-            <p class='text text_theme_dark'>Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>9</h4>
-            <p class='text text_theme_dark'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="cell cell_theme_dark">
-            <h4 class='heading heading_theme_dark'>10</h4>
-            <p class='text text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__img-triangle" src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана!">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo_place_footer">
-          <p class="footer__author">&#169; 2022.Константин Серебренников</p>
+     <div class="footer__columns">
+        <div class="footer__column footer__columns_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Яндекс.Практикум" class="logo logo_place_footer">
+          <p class="footer__author">&copy; 2022.Константин Серебренников</p>
         </div>
-        <div class="footer__columns_content_info">
-          <h4 class="footer__column-heading">О Практикуме</h4>
-          <ul class="footer__column-link">
-            <li>Главная</li>
-            <li>Концепция</li>
-            <li>Наставники</li>
-          </ul>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
         </div>
-        <div class="footer__columns_content_social">
-          <h4 class="footer__column-heading">Соцсети</h4>
-          <ul class="footer__column-link">
-            <li><a href="#"><img src="./images/facebook_color_white.svg" alt="ФБ" class="footer__social-icon"></a>Facebook</li>
-            <li><a href="#"><img src="./images/vk_color_white.svg" alt="ВК" class="footer__social-icon"></a>Вконтакте</li>
-            <li><a href="#"><img src="./images/instagram_color_white.svg" alt="Инста" class="footer__social-icon"></a>Instagram</li>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="ФБ" class="footer__social-icon">Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВК" class="footer__social-icon">Вконтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инста" class="footer__social-icon">Instagram</a></li>
           </ul>
 
         </div>
-      </div>
+      </div>  
     </footer>
   </div>
 </body>
