--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><a href="https://arzamas.academy/" target="_blank"><img src="./images/resources-arzamas.svg" width="270" height="38" alt="Арзамас"></a></li>
-          <li class="resources__logo"><a href="https://nplus1.ru/" target="_blank"><img src="./images/resources-n1.svg" width="270" height="38" alt="Н1"></a></li>
-          <li class="resources__logo"><a href="https://www.strelka.com/" target="_blank"><img src="./images/resources-strelka.svg" width="270" height="38" alt="Стрелка"></a></li>
-          <li class="resources__logo"><a href="https://polka.academy/" target="_blank"><img  src="./images/resources-polka.svg" width="270" height="38" alt="Полка"></a></li>
+          <li><a href="https://arzamas.academy/" target="_blank"><img class="resources__logo" src="./images/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li><a href="https://nplus1.ru/" target="_blank"><img  class="resources__logo" src="./images/resources-n1.svg" alt="Н1"></a></li>
+          <li><a href="https://www.strelka.com/" target="_blank"><img class="resources__logo" src="./images/resources-strelka.svg"  alt="Стрелка"></a></li>
+          <li><a  href="https://polka.academy/" target="_blank"><img class="resources__logo"  src="./images/resources-polka.svg" alt="Полка"></a></li>
         </ul>
       </section>
     </main>
